centered.css
/* ===== Centered CSS: https://github.com/tomsoderlund/centered ===== */

/* ----- Reset ----- */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  position: absolute;

  left: 0;
  right: 0;
  top: 0;
  bottom: 0;

  display: flex;
  justify-content: center;
  align-items: center;

  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
}

.centered {
  font-size: 3vmin;
  font-size: calc(3 * var(--vmin, 1vmin));
  /* font-size: clamp(8px, calc(3 * var(--vmin, 1vmin)), 24px); */
  width: 33.333em;
  height: 33.333em;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  padding: 2em;
}

.centered-debug {
  background-color: rgba(0, 200, 200, 0.05);
}

